--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'com.android.application'
 
+
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.ejemplofirebase"
+        applicationId "com.example.firebase"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
@@ -28,10 +29,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-auth:16.2.0'
-    implementation 'com.google.android.gms:play-services-auth:16.0.1'
-
-
-
 }
-
 apply plugin: 'com.google.gms.google-services'
